--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 ﻿<!doctype html>
-<html lang="en" ng-app="RDash">
+<html lang="en" ng-app="Orbital">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>RDash AngularJS</title>
+	<title>Orbital</title>
   <!-- STYLES -->
   <!-- build:css lib/css/main.min.css -->
   <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css">
