add friend to train the API

--- a/src/index.html
+++ b/src/index.html
@@ -26,21 +26,24 @@
 
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
-      <ul class="sidebar">
-        <li class="sidebar-main">
-          <a ng-click="toggleSidebar()">
-            Dashboard
-            <span class="menu-icon glyphicon glyphicon-transfer"></span>
-          </a>
-        </li>
-        <li class="sidebar-title"><span>NAVIGATION</span></li>
-        <li class="sidebar-list">
-          <a href="#">Upload <span class="menu-icon fa fa-tachometer"></span></a>
-        </li>
-        <li class="sidebar-list">
-          <a href="#/search">Search <span class="menu-icon fa fa-table"></span></a>
-        </li>
-      </ul>
+        <ul class="sidebar">
+            <li class="sidebar-main">
+                <a ng-click="toggleSidebar()">
+                    Dashboard
+                    <span class="menu-icon glyphicon glyphicon-transfer"></span>
+                </a>
+            </li>
+            <li class="sidebar-title"><span>NAVIGATION</span></li>
+            <li class="sidebar-list">
+                <a href="#">Upload <span class="menu-icon fa fa-adn"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a href="#/add">Add Friend <span class="menu-icon fa fa-tachometer"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a href="#/search">Search <span class="menu-icon fa fa-table"></span></a>
+            </li>
+        </ul>
       <div class="sidebar-footer">
        
       </div>
