--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="components/angular/angular.min.js"></script>
   <script type="text/javascript" src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script type="text/javascript" src="components/angular-cookies/angular-cookies.min.js"></script>
+  <script type="text/javascript" src="components/angular-file-upload/dist/angular-file-upload.min.js"></script>
   <script type="text/javascript" src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <!-- endbuild -->
   <!-- Custom Scripts -->
@@ -35,7 +36,7 @@
             </li>
             <li class="sidebar-title"><span>NAVIGATION</span></li>
             <li class="sidebar-list">
-                <a href="#">Upload <span class="menu-icon fa fa-adn"></span></a>
+                <a ui-sref="uploader" href="#" ng-click="showUploader()">Upload <span class="menu-icon fa fa-adn"></span></a>
             </li>
             <li class="sidebar-list">
                 <a href="#/add">Add Friend <span class="menu-icon fa fa-tachometer"></span></a>
