--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
                 <a href="#">Upload <span class="menu-icon fa fa-adn"></span></a>
             </li>
             <li class="sidebar-list">
-                <a href="#/add">Add Friend <span class="menu-icon fa fa-tachometer"></span></a>
+                <a href="#/add">Add Family <span class="menu-icon fa fa-tachometer"></span></a>
             </li>
             <li class="sidebar-list">
                 <a href="#/search">Search <span class="menu-icon fa fa-table"></span></a>
